--- a/style.css
+++ b/style.css
@@ -3,19 +3,22 @@
   padding: 0;
   text-align: center;
 }
-body{
-  
-background-color:#99dfff;
-background-image:
-radial-gradient(at 18% 95%, hsla(170,91%,79%,1) 0px, transparent 50%),
-radial-gradient(at 31% 37%, hsla(143,91%,79%,1) 0px, transparent 50%),
-radial-gradient(at 98% 3%, hsla(80,91%,79%,1) 0px, transparent 50%),
-radial-gradient(at 83% 59%, hsla(325,91%,79%,1) 0px, transparent 50%),
-radial-gradient(at 74% 18%, hsla(216,91%,79%,1) 0px, transparent 50%),
-radial-gradient(at 55% 88%, hsla(206,91%,79%,1) 0px, transparent 50%),
-radial-gradient(at 47% 19%, hsla(324,91%,79%,1) 0px, transparent 50%),
-radial-gradient(at 13% 74%, hsla(232,91%,79%,1) 0px, transparent 50%),
-radial-gradient(at 10% 8%, hsla(3,91%,79%,1) 0px, transparent 50%);
+body {
+  height: 100vh;
+  background-color: #99dfff;
+  background-image: radial-gradient(
+      at 18% 95%,
+      hsla(170, 91%, 79%, 1) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 31% 37%, hsla(143, 91%, 79%, 1) 0px, transparent 50%),
+    radial-gradient(at 98% 3%, hsla(80, 91%, 79%, 1) 0px, transparent 50%),
+    radial-gradient(at 83% 59%, hsla(325, 91%, 79%, 1) 0px, transparent 50%),
+    radial-gradient(at 74% 18%, hsla(216, 91%, 79%, 1) 0px, transparent 50%),
+    radial-gradient(at 55% 88%, hsla(206, 91%, 79%, 1) 0px, transparent 50%),
+    radial-gradient(at 47% 19%, hsla(324, 91%, 79%, 1) 0px, transparent 50%),
+    radial-gradient(at 13% 74%, hsla(232, 91%, 79%, 1) 0px, transparent 50%),
+    radial-gradient(at 10% 8%, hsla(3, 91%, 79%, 1) 0px, transparent 50%);
 }
 h1 {
   background-color: rgb(190, 252, 31);
