--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ text-align: center;
 
 67%
 
-DETAILS
 body {
 
 
@@ -129,9 +128,9 @@ margin-top: 3rem;
 
  opacity: 0.7;
 
- -}
+ }
 
- -img {
+ img {
  height: 140px;
 
  width: 140px;
